psn banner addition

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ layout: default
     {% endfor %}
   </ul>
 
+<a href="http://psnprofiles.com/MisterNoobie"><img src="http://card.psnprofiles.com/1/MisterNoobie.png" border="0"></a>
+
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
